--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ MONGODB_CLOUD_URL=mongodb+srv://test:test@cluster0.59te8vi.mongodb.net/project
 JWT_SECRET = SECRETHO
 EMAIL_USER =helloprajapati123456@gmail.com
 EMAIL_PASS=xwkh ruir duel dybu
-HOST = http://192.168.18.174
+HOST = https://localhost
